--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,6 +7,8 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": false,
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
@@ -14,6 +16,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
+    "strict": true,
     "paths": {}
   },
   "exclude": ["node_modules", "tmp"]
