--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "prepare": "husky install"
   },
+  "packageManager": "pnpm@7.26.3",
   "engines": {
-    "pnpm": "7.26.3"
+    "node": "19"
   },
   "private": true,
   "devDependencies": {
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@nrwl/eslint-plugin-nx": "15.6.3",
     "@nrwl/js": "15.6.3",
     "@nrwl/linter": "15.6.3",
@@ -36,7 +40,9 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^8.0.3",
     "jsdom": "~20.0.3",
+    "lint-staged": "^13.1.0",
     "nx": "15.6.3",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
