--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,6 +2,8 @@
   "compileOnSave": false,
   "compilerOptions": {
     "rootDir": ".",
+    "baseUrl": ".",
+    "jsx": "preserve",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
@@ -10,12 +12,11 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": false,
     "importHelpers": true,
-    "target": "es2015",
+    "target": "es2022",
     "module": "esnext",
-    "lib": ["es2017", "dom"],
+    "lib": ["es2022", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "baseUrl": ".",
     "strict": true,
     "paths": {}
   },
