--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nrwl/workspace": "15.6.3",
     "@playwright/test": "^1.30.0",
     "@swc/core": "^1.2.173",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
