--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@types/react-dom": "18.0.9",
     "@types/react-is": "17.0.3",
     "@types/styled-components": "5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
@@ -42,6 +42,7 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "jsdom": "~20.0.3",
     "lint-staged": "^13.1.0",
@@ -56,6 +57,7 @@
     "vitest": "^0.25.8"
   },
   "dependencies": {
+    "@nextui-org/react": "1.0.0-beta.12",
     "@nxkit/playwright": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
