--- a/package.json
+++ b/package.json
@@ -12,29 +12,29 @@
   },
   "private": true,
   "devDependencies": {
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
+    "@commitlint/cli": "17.4.2",
+    "@commitlint/config-conventional": "17.4.2",
     "@nrwl/eslint-plugin-nx": "15.6.3",
     "@nrwl/js": "15.6.3",
     "@nrwl/linter": "15.6.3",
     "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "^15.6.3",
+    "@nrwl/react": "15.6.3",
     "@nrwl/vite": "15.6.3",
     "@nrwl/workspace": "15.6.3",
-    "@playwright/test": "^1.30.0",
-    "@swc/core": "^1.2.173",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@playwright/test": "1.30.0",
+    "@swc/core": "1.2.173",
+    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@types/react-is": "17.0.3",
     "@types/styled-components": "5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
-    "@vitejs/plugin-react": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "5.50.0",
+    "@typescript-eslint/parser": "5.50.0",
+    "@vitejs/plugin-react-swc": "3.1.0",
     "@vitest/coverage-c8": "~0.25.8",
-    "@vitest/ui": "^0.25.8",
+    "@vitest/ui": "0.25.8",
     "babel-plugin-styled-components": "1.10.7",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -42,23 +42,24 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "husky": "^8.0.3",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "husky": "8.0.3",
     "jsdom": "~20.0.3",
-    "lint-staged": "^13.1.0",
+    "lint-staged": "13.1.0",
     "nx": "15.6.3",
-    "prettier": "^2.6.2",
+    "prettier": "2.6.2",
     "react-test-renderer": "18.2.0",
     "swc-loader": "0.1.15",
     "typescript": "~4.8.2",
-    "vite": "^4.0.1",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "^4.0.2",
-    "vitest": "^0.25.8"
+    "vite": "4.0.1",
+    "vite-plugin-dts": "1.7.2",
+    "vite-plugin-eslint": "1.8.1",
+    "vite-tsconfig-paths": "4.0.2",
+    "vitest": "0.25.8"
   },
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.12",
-    "@nxkit/playwright": "^2.0.1",
+    "@nxkit/playwright": "2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
