--- a/apps/e2e/todo-web-e2e/.eslintrc.json
+++ b/apps/e2e/todo-web-e2e/.eslintrc.json
@@ -8,6 +8,9 @@
     },
     {
       "files": ["*.ts", "*.tsx"],
+      "parserOptions": {
+        "project": "apps/e2e/todo-web-e2e/tsconfig.lint.json"
+      },
       "rules": {}
     },
     {
