--- a/apps/e2e/todo-web-e2e/project.json
+++ b/apps/e2e/todo-web-e2e/project.json
@@ -40,7 +40,8 @@
         "reportPath": "dist/apps/e2e/todo-web-e2e/playwright-report"
       }
     },
-    "lint": {}
+    "lint": {},
+    "type-check": {}
   },
   "implicitDependencies": ["todo-web"]
 }
