--- a/apps/todo-web/.eslintrc.json
+++ b/apps/todo-web/.eslintrc.json
@@ -8,6 +8,9 @@
     },
     {
       "files": ["*.ts", "*.tsx"],
+      "parserOptions": {
+        "project": "apps/todo-web/tsconfig.lint.json"
+      },
       "rules": {}
     },
     {
