--- a/apps/todo-web/tsconfig.spec.json
+++ b/apps/todo-web/tsconfig.spec.json
@@ -6,6 +6,7 @@
   },
   "include": [
     "vite.config.ts",
+    "jest.setup.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "src/**/*.test.tsx",
