--- a/package.json
+++ b/package.json
@@ -33,29 +33,33 @@
     "@typescript-eslint/eslint-plugin": "5.50.0",
     "@typescript-eslint/parser": "5.50.0",
     "@vitejs/plugin-react-swc": "3.1.0",
-    "@vitest/coverage-c8": "~0.25.8",
+    "@vitest/coverage-c8": "0.25.8",
     "@vitest/ui": "0.25.8",
     "babel-plugin-styled-components": "1.10.7",
-    "eslint": "~8.15.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-config-standard-with-typescript": "34.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-n": "15.6.1",
+    "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "husky": "8.0.3",
-    "jsdom": "~20.0.3",
+    "jsdom": "20.0.3",
     "lint-staged": "13.1.0",
     "nx": "15.6.3",
     "prettier": "2.6.2",
     "react-test-renderer": "18.2.0",
     "swc-loader": "0.1.15",
-    "typescript": "~4.8.2",
+    "typescript": "4.8.2",
     "vite": "4.0.1",
     "vite-plugin-dts": "1.7.2",
     "vite-plugin-eslint": "1.8.1",
     "vite-tsconfig-paths": "4.0.2",
-    "vitest": "0.25.8"
+    "vitest": "0.25.8",
+    "webpack": "5.75.0"
   },
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.12",
