--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,8 +9,6 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": false,
     "importHelpers": true,
     "target": "es2022",
     "module": "esnext",
@@ -20,5 +18,5 @@
     "strict": true,
     "paths": {}
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": ["node_modules", "tmp", "dist", "local", "coverage"]
 }
