--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.12",
     "@nxkit/playwright": "2.0.1",
+    "lucide-react": "^0.115.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
