--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "todo-web:dev": "nx run todo-web:serve"
   },
   "packageManager": "pnpm@7.26.3",
   "engines": {
