feat: create todo item action buttons

--- a/apps/todo-web/tsconfig.json
+++ b/apps/todo-web/tsconfig.json
@@ -3,7 +3,11 @@
     "jsx": "react-jsx",
     "types": ["vite/client", "vitest"],
     "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["src/*"]
+    }
   },
   "files": [],
   "include": [],
